force-app/main/default/objects/copadovsm__Process_Block__c/copadovsm__Process_Block__c.object-meta.xml
<CustomObject>
    <label>Process Block</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>