force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Active_Criteria__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Active_Criteria__c</fullName>
    <inlineHelpText>The Active Criteria should be what is “in progress” or actual “working/active” values. These will be configured from the Primary Field that is selected on the VSM.</inlineHelpText>
    <label>Active Criteria</label>
    <type>TextArea</type>
</CustomField>