force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__CA_Threshold__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__CA_Threshold__c</fullName>
    <label>CA Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>