force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__CA_Threshold_Type__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__CA_Threshold_Type__c</fullName>
    <label>CA Threshold Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Threshold</fullName>
                <default>true</default>
                <label>Lower Threshold</label>
            </value>
            <value>
                <fullName>Upper Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>