force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Lead_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Lead_Time_Threshold__c</fullName>
    <label>Lead Time Threshold</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>