force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Order__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Order of Process Block within a Stage.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>