force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Record_Types__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Record_Types__c</fullName>
    <inlineHelpText>coma separated list of values. Empty means all.</inlineHelpText>
    <label>Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>