force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Stage__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>copadovsm__Stage__c</referenceTo>
    <relationshipLabel>Process Blocks</relationshipLabel>
    <relationshipName>Process_Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>