force-app/main/default/objects/copadovsm__Process_Block__c/fields/copadovsm__Waiting_Criteria__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Waiting_Criteria__c</fullName>
    <formula>copadovsm__Stage__r.copadovsm__Waiting_Criteria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Process blocks inherits waiting criteria information from their parent Stage.</inlineHelpText>
    <label>Waiting Criteria</label>
    <type>Text</type>
</CustomField>